# todolist-cpp

./: CMakeLists.txt  config.json  deps.txt  init.sql  main.cpp
categories/: categories.cpp  categories.h
db/: db.cpp  db.h
notes/: notes.cpp  notes.h
users/: users.cpp  users.h
utils/: utils.cpp  utils.h
validations/: validations.cpp  validations.h
